feat(AG-014): create authorize in swagger
